parser.output
Terminals unused in grammar

   '+'
   '-'
   '*'
   '/'


Rules useless in parser due to conflicts

   20 expr_plus_minus: /* empty */

   26 termo_div_mult: /* empty */

   47 lista_expr_x: /* empty */

   50 comparacao: expressao operador_de_comparacao expressao


State 23 conflicts: 3 shift/reduce
State 31 conflicts: 1 shift/reduce, 3 reduce/reduce
State 46 conflicts: 2 shift/reduce, 12 reduce/reduce
State 47 conflicts: 2 shift/reduce, 12 reduce/reduce
State 48 conflicts: 2 shift/reduce, 12 reduce/reduce
State 49 conflicts: 2 shift/reduce, 12 reduce/reduce
State 62 conflicts: 3 reduce/reduce
State 69 conflicts: 1 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: sequencia_de_comandos END

    2 sequencia_de_comandos: comando seqy

    3 seqy: /* empty */
    4     | seq_comandox

    5 seq_comandox: PV comando seq_comandoy

    6 seq_comandoy: /* empty */
    7             | seq_comandox

    8 comando: atribuicao
    9        | desvio
   10        | leitura
   11        | impressao
   12        | decisao
   13        | /* empty */
   14        | rotulo COLON comando

   15 atribuicao: LET identificador ATRIB expressao

   16 expressao: termo
   17          | exprx

   18 exprx: PLUS termo expr_plus_minus
   19      | MINUS termo expr_plus_minus

   20 expr_plus_minus: /* empty */
   21                | exprx

   22 termo: fator
   23      | termox

   24 termox: MULT fator termo_div_mult
   25       | DIV fator termo_div_mult

   26 termo_div_mult: /* empty */
   27               | termox

   28 fator: identificador
   29      | numero
   30      | expressao

   31 desvio: GOTO desvio_x

   32 desvio_x: rotulo
   33         | identificador OF lista_de_rotulos

   34 lista_de_rotulos: rotulo lista_rotulo_y

   35 lista_rotulo_y: /* empty */
   36               | lista_rotulox

   37 lista_rotulox: VIRG rotulo lista_rotuloz

   38 lista_rotuloz: /* empty */
   39              | lista_rotulox

   40 rotulo: identificador

   41 leitura: READ lista_de_identificadores

   42 lista_de_identificadores: identificador lista_id_x

   43 lista_id_x: /* empty */
   44           | VIRG lista_de_identificadores

   45 impressao: PRINT lista_de_expressoes

   46 lista_de_expressoes: expressao lista_expr_x

   47 lista_expr_x: /* empty */
   48             | VIRG lista_de_expressoes

   49 decisao: IF comparacao THEN comando ELSE comando

   50 comparacao: expressao operador_de_comparacao expressao

   51 operador_de_comparacao: BIG
   52                       | EQUAL
   53                       | SMALL

   54 identificador: ID

   55 numero: NUM


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
error (256)
PV (258) 5
LET (259) 15
COLON (260) 14
IF (261) 49
MULT (262) 24
PRINT (263) 45
ATRIB (264) 15
END (265) 1
VIRG (266) 37 44 48
PLUS (267) 18
GOTO (268) 31
OF (269) 33
READ (270) 41
THEN (271) 49
ELSE (272) 49
BIG (273) 51
EQUAL (274) 52
SMALL (275) 53
DIV (276) 25
ID (277) 54
NUM (278) 55
MINUS (279) 19


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
programa (30)
    on left: 1, on right: 0
sequencia_de_comandos (31)
    on left: 2, on right: 1
seqy (32)
    on left: 3 4, on right: 2
seq_comandox (33)
    on left: 5, on right: 4 7
seq_comandoy (34)
    on left: 6 7, on right: 5
comando (35)
    on left: 8 9 10 11 12 13 14, on right: 2 5 14 49
atribuicao (36)
    on left: 15, on right: 8
expressao (37)
    on left: 16 17, on right: 15 30 46 50
exprx (38)
    on left: 18 19, on right: 17 21
expr_plus_minus (39)
    on left: 20 21, on right: 18 19
termo (40)
    on left: 22 23, on right: 16 18 19
termox (41)
    on left: 24 25, on right: 23 27
termo_div_mult (42)
    on left: 26 27, on right: 24 25
fator (43)
    on left: 28 29 30, on right: 22 24 25
desvio (44)
    on left: 31, on right: 9
desvio_x (45)
    on left: 32 33, on right: 31
lista_de_rotulos (46)
    on left: 34, on right: 33
lista_rotulo_y (47)
    on left: 35 36, on right: 34
lista_rotulox (48)
    on left: 37, on right: 36 39
lista_rotuloz (49)
    on left: 38 39, on right: 37
rotulo (50)
    on left: 40, on right: 14 32 34 37
leitura (51)
    on left: 41, on right: 10
lista_de_identificadores (52)
    on left: 42, on right: 41 44
lista_id_x (53)
    on left: 43 44, on right: 42
impressao (54)
    on left: 45, on right: 11
lista_de_expressoes (55)
    on left: 46, on right: 45 48
lista_expr_x (56)
    on left: 47 48, on right: 46
decisao (57)
    on left: 49, on right: 12
comparacao (58)
    on left: 50, on right: 49
operador_de_comparacao (59)
    on left: 51 52 53, on right: 50
identificador (60)
    on left: 54, on right: 15 28 33 40 42
numero (61)
    on left: 55, on right: 29


state 0

    0 $accept: . programa $end

    LET    shift, and go to state 1
    IF     shift, and go to state 2
    PRINT  shift, and go to state 3
    GOTO   shift, and go to state 4
    READ   shift, and go to state 5
    ID     shift, and go to state 6

    $default  reduce using rule 13 (comando)

    programa               go to state 7
    sequencia_de_comandos  go to state 8
    comando                go to state 9
    atribuicao             go to state 10
    desvio                 go to state 11
    rotulo                 go to state 12
    leitura                go to state 13
    impressao              go to state 14
    decisao                go to state 15
    identificador          go to state 16


state 1

   15 atribuicao: LET . identificador ATRIB expressao

    ID  shift, and go to state 6

    identificador  go to state 17


state 2

   49 decisao: IF . comparacao THEN comando ELSE comando

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao      go to state 23
    exprx          go to state 24
    termo          go to state 25
    termox         go to state 26
    fator          go to state 27
    comparacao     go to state 28
    identificador  go to state 29
    numero         go to state 30


state 3

   45 impressao: PRINT . lista_de_expressoes

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao            go to state 31
    exprx                go to state 24
    termo                go to state 25
    termox               go to state 26
    fator                go to state 27
    lista_de_expressoes  go to state 32
    identificador        go to state 29
    numero               go to state 30


state 4

   31 desvio: GOTO . desvio_x

    ID  shift, and go to state 6

    desvio_x       go to state 33
    rotulo         go to state 34
    identificador  go to state 35


state 5

   41 leitura: READ . lista_de_identificadores

    ID  shift, and go to state 6

    lista_de_identificadores  go to state 36
    identificador             go to state 37


state 6

   54 identificador: ID .

    $default  reduce using rule 54 (identificador)


state 7

    0 $accept: programa . $end

    $end  shift, and go to state 38


state 8

    1 programa: sequencia_de_comandos . END

    END  shift, and go to state 39


state 9

    2 sequencia_de_comandos: comando . seqy

    PV  shift, and go to state 40

    $default  reduce using rule 3 (seqy)

    seqy          go to state 41
    seq_comandox  go to state 42


state 10

    8 comando: atribuicao .

    $default  reduce using rule 8 (comando)


state 11

    9 comando: desvio .

    $default  reduce using rule 9 (comando)


state 12

   14 comando: rotulo . COLON comando

    COLON  shift, and go to state 43


state 13

   10 comando: leitura .

    $default  reduce using rule 10 (comando)


state 14

   11 comando: impressao .

    $default  reduce using rule 11 (comando)


state 15

   12 comando: decisao .

    $default  reduce using rule 12 (comando)


state 16

   40 rotulo: identificador .

    $default  reduce using rule 40 (rotulo)


state 17

   15 atribuicao: LET identificador . ATRIB expressao

    ATRIB  shift, and go to state 44


state 18

   24 termox: MULT . fator termo_div_mult

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao      go to state 45
    exprx          go to state 24
    termo          go to state 25
    termox         go to state 26
    fator          go to state 46
    identificador  go to state 29
    numero         go to state 30


state 19

   18 exprx: PLUS . termo expr_plus_minus

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao      go to state 45
    exprx          go to state 24
    termo          go to state 47
    termox         go to state 26
    fator          go to state 27
    identificador  go to state 29
    numero         go to state 30


state 20

   25 termox: DIV . fator termo_div_mult

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao      go to state 45
    exprx          go to state 24
    termo          go to state 25
    termox         go to state 26
    fator          go to state 48
    identificador  go to state 29
    numero         go to state 30


state 21

   55 numero: NUM .

    $default  reduce using rule 55 (numero)


state 22

   19 exprx: MINUS . termo expr_plus_minus

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao      go to state 45
    exprx          go to state 24
    termo          go to state 49
    termox         go to state 26
    fator          go to state 27
    identificador  go to state 29
    numero         go to state 30


state 23

   30 fator: expressao .
   50 comparacao: expressao . operador_de_comparacao expressao

    BIG    shift, and go to state 50
    EQUAL  shift, and go to state 51
    SMALL  shift, and go to state 52

    BIG    [reduce using rule 30 (fator)]
    EQUAL  [reduce using rule 30 (fator)]
    SMALL  [reduce using rule 30 (fator)]

    operador_de_comparacao  go to state 53


state 24

   17 expressao: exprx .

    $default  reduce using rule 17 (expressao)


state 25

   16 expressao: termo .

    $default  reduce using rule 16 (expressao)


state 26

   23 termo: termox .

    $default  reduce using rule 23 (termo)


state 27

   22 termo: fator .

    $default  reduce using rule 22 (termo)


state 28

   49 decisao: IF comparacao . THEN comando ELSE comando

    THEN  shift, and go to state 54


state 29

   28 fator: identificador .

    $default  reduce using rule 28 (fator)


state 30

   29 fator: numero .

    $default  reduce using rule 29 (fator)


state 31

   30 fator: expressao .
   46 lista_de_expressoes: expressao . lista_expr_x

    VIRG  shift, and go to state 55

    PV        reduce using rule 30 (fator)
    PV        [reduce using rule 47 (lista_expr_x)]
    END       reduce using rule 30 (fator)
    END       [reduce using rule 47 (lista_expr_x)]
    VIRG      [reduce using rule 30 (fator)]
    ELSE      reduce using rule 30 (fator)
    ELSE      [reduce using rule 47 (lista_expr_x)]
    $default  reduce using rule 30 (fator)

    lista_expr_x  go to state 56


state 32

   45 impressao: PRINT lista_de_expressoes .

    $default  reduce using rule 45 (impressao)


state 33

   31 desvio: GOTO desvio_x .

    $default  reduce using rule 31 (desvio)


state 34

   32 desvio_x: rotulo .

    $default  reduce using rule 32 (desvio_x)


state 35

   33 desvio_x: identificador . OF lista_de_rotulos
   40 rotulo: identificador .

    OF  shift, and go to state 57

    $default  reduce using rule 40 (rotulo)


state 36

   41 leitura: READ lista_de_identificadores .

    $default  reduce using rule 41 (leitura)


state 37

   42 lista_de_identificadores: identificador . lista_id_x

    VIRG  shift, and go to state 58

    $default  reduce using rule 43 (lista_id_x)

    lista_id_x  go to state 59


state 38

    0 $accept: programa $end .

    $default  accept


state 39

    1 programa: sequencia_de_comandos END .

    $default  reduce using rule 1 (programa)


state 40

    5 seq_comandox: PV . comando seq_comandoy

    LET    shift, and go to state 1
    IF     shift, and go to state 2
    PRINT  shift, and go to state 3
    GOTO   shift, and go to state 4
    READ   shift, and go to state 5
    ID     shift, and go to state 6

    $default  reduce using rule 13 (comando)

    comando        go to state 60
    atribuicao     go to state 10
    desvio         go to state 11
    rotulo         go to state 12
    leitura        go to state 13
    impressao      go to state 14
    decisao        go to state 15
    identificador  go to state 16


state 41

    2 sequencia_de_comandos: comando seqy .

    $default  reduce using rule 2 (sequencia_de_comandos)


state 42

    4 seqy: seq_comandox .

    $default  reduce using rule 4 (seqy)


state 43

   14 comando: rotulo COLON . comando

    LET    shift, and go to state 1
    IF     shift, and go to state 2
    PRINT  shift, and go to state 3
    GOTO   shift, and go to state 4
    READ   shift, and go to state 5
    ID     shift, and go to state 6

    $default  reduce using rule 13 (comando)

    comando        go to state 61
    atribuicao     go to state 10
    desvio         go to state 11
    rotulo         go to state 12
    leitura        go to state 13
    impressao      go to state 14
    decisao        go to state 15
    identificador  go to state 16


state 44

   15 atribuicao: LET identificador ATRIB . expressao

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao      go to state 62
    exprx          go to state 24
    termo          go to state 25
    termox         go to state 26
    fator          go to state 27
    identificador  go to state 29
    numero         go to state 30


state 45

   30 fator: expressao .

    $default  reduce using rule 30 (fator)


state 46

   22 termo: fator .
   24 termox: MULT fator . termo_div_mult

    MULT  shift, and go to state 18
    DIV   shift, and go to state 20

    PV        reduce using rule 22 (termo)
    PV        [reduce using rule 26 (termo_div_mult)]
    MULT      [reduce using rule 22 (termo)]
    MULT      [reduce using rule 26 (termo_div_mult)]
    END       reduce using rule 22 (termo)
    END       [reduce using rule 26 (termo_div_mult)]
    VIRG      reduce using rule 22 (termo)
    VIRG      [reduce using rule 26 (termo_div_mult)]
    PLUS      reduce using rule 22 (termo)
    PLUS      [reduce using rule 26 (termo_div_mult)]
    THEN      reduce using rule 22 (termo)
    THEN      [reduce using rule 26 (termo_div_mult)]
    ELSE      reduce using rule 22 (termo)
    ELSE      [reduce using rule 26 (termo_div_mult)]
    BIG       reduce using rule 22 (termo)
    BIG       [reduce using rule 26 (termo_div_mult)]
    EQUAL     reduce using rule 22 (termo)
    EQUAL     [reduce using rule 26 (termo_div_mult)]
    SMALL     reduce using rule 22 (termo)
    SMALL     [reduce using rule 26 (termo_div_mult)]
    DIV       [reduce using rule 22 (termo)]
    DIV       [reduce using rule 26 (termo_div_mult)]
    MINUS     reduce using rule 22 (termo)
    MINUS     [reduce using rule 26 (termo_div_mult)]
    $default  reduce using rule 22 (termo)

    termox          go to state 63
    termo_div_mult  go to state 64


state 47

   16 expressao: termo .
   18 exprx: PLUS termo . expr_plus_minus

    PLUS   shift, and go to state 19
    MINUS  shift, and go to state 22

    PV        reduce using rule 16 (expressao)
    PV        [reduce using rule 20 (expr_plus_minus)]
    MULT      reduce using rule 16 (expressao)
    MULT      [reduce using rule 20 (expr_plus_minus)]
    END       reduce using rule 16 (expressao)
    END       [reduce using rule 20 (expr_plus_minus)]
    VIRG      reduce using rule 16 (expressao)
    VIRG      [reduce using rule 20 (expr_plus_minus)]
    PLUS      [reduce using rule 16 (expressao)]
    PLUS      [reduce using rule 20 (expr_plus_minus)]
    THEN      reduce using rule 16 (expressao)
    THEN      [reduce using rule 20 (expr_plus_minus)]
    ELSE      reduce using rule 16 (expressao)
    ELSE      [reduce using rule 20 (expr_plus_minus)]
    BIG       reduce using rule 16 (expressao)
    BIG       [reduce using rule 20 (expr_plus_minus)]
    EQUAL     reduce using rule 16 (expressao)
    EQUAL     [reduce using rule 20 (expr_plus_minus)]
    SMALL     reduce using rule 16 (expressao)
    SMALL     [reduce using rule 20 (expr_plus_minus)]
    DIV       reduce using rule 16 (expressao)
    DIV       [reduce using rule 20 (expr_plus_minus)]
    MINUS     [reduce using rule 16 (expressao)]
    MINUS     [reduce using rule 20 (expr_plus_minus)]
    $default  reduce using rule 16 (expressao)

    exprx            go to state 65
    expr_plus_minus  go to state 66


state 48

   22 termo: fator .
   25 termox: DIV fator . termo_div_mult

    MULT  shift, and go to state 18
    DIV   shift, and go to state 20

    PV        reduce using rule 22 (termo)
    PV        [reduce using rule 26 (termo_div_mult)]
    MULT      [reduce using rule 22 (termo)]
    MULT      [reduce using rule 26 (termo_div_mult)]
    END       reduce using rule 22 (termo)
    END       [reduce using rule 26 (termo_div_mult)]
    VIRG      reduce using rule 22 (termo)
    VIRG      [reduce using rule 26 (termo_div_mult)]
    PLUS      reduce using rule 22 (termo)
    PLUS      [reduce using rule 26 (termo_div_mult)]
    THEN      reduce using rule 22 (termo)
    THEN      [reduce using rule 26 (termo_div_mult)]
    ELSE      reduce using rule 22 (termo)
    ELSE      [reduce using rule 26 (termo_div_mult)]
    BIG       reduce using rule 22 (termo)
    BIG       [reduce using rule 26 (termo_div_mult)]
    EQUAL     reduce using rule 22 (termo)
    EQUAL     [reduce using rule 26 (termo_div_mult)]
    SMALL     reduce using rule 22 (termo)
    SMALL     [reduce using rule 26 (termo_div_mult)]
    DIV       [reduce using rule 22 (termo)]
    DIV       [reduce using rule 26 (termo_div_mult)]
    MINUS     reduce using rule 22 (termo)
    MINUS     [reduce using rule 26 (termo_div_mult)]
    $default  reduce using rule 22 (termo)

    termox          go to state 63
    termo_div_mult  go to state 67


state 49

   16 expressao: termo .
   19 exprx: MINUS termo . expr_plus_minus

    PLUS   shift, and go to state 19
    MINUS  shift, and go to state 22

    PV        reduce using rule 16 (expressao)
    PV        [reduce using rule 20 (expr_plus_minus)]
    MULT      reduce using rule 16 (expressao)
    MULT      [reduce using rule 20 (expr_plus_minus)]
    END       reduce using rule 16 (expressao)
    END       [reduce using rule 20 (expr_plus_minus)]
    VIRG      reduce using rule 16 (expressao)
    VIRG      [reduce using rule 20 (expr_plus_minus)]
    PLUS      [reduce using rule 16 (expressao)]
    PLUS      [reduce using rule 20 (expr_plus_minus)]
    THEN      reduce using rule 16 (expressao)
    THEN      [reduce using rule 20 (expr_plus_minus)]
    ELSE      reduce using rule 16 (expressao)
    ELSE      [reduce using rule 20 (expr_plus_minus)]
    BIG       reduce using rule 16 (expressao)
    BIG       [reduce using rule 20 (expr_plus_minus)]
    EQUAL     reduce using rule 16 (expressao)
    EQUAL     [reduce using rule 20 (expr_plus_minus)]
    SMALL     reduce using rule 16 (expressao)
    SMALL     [reduce using rule 20 (expr_plus_minus)]
    DIV       reduce using rule 16 (expressao)
    DIV       [reduce using rule 20 (expr_plus_minus)]
    MINUS     [reduce using rule 16 (expressao)]
    MINUS     [reduce using rule 20 (expr_plus_minus)]
    $default  reduce using rule 16 (expressao)

    exprx            go to state 65
    expr_plus_minus  go to state 68


state 50

   51 operador_de_comparacao: BIG .

    $default  reduce using rule 51 (operador_de_comparacao)


state 51

   52 operador_de_comparacao: EQUAL .

    $default  reduce using rule 52 (operador_de_comparacao)


state 52

   53 operador_de_comparacao: SMALL .

    $default  reduce using rule 53 (operador_de_comparacao)


state 53

   50 comparacao: expressao operador_de_comparacao . expressao

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao      go to state 69
    exprx          go to state 24
    termo          go to state 25
    termox         go to state 26
    fator          go to state 27
    identificador  go to state 29
    numero         go to state 30


state 54

   49 decisao: IF comparacao THEN . comando ELSE comando

    LET    shift, and go to state 1
    IF     shift, and go to state 2
    PRINT  shift, and go to state 3
    GOTO   shift, and go to state 4
    READ   shift, and go to state 5
    ID     shift, and go to state 6

    $default  reduce using rule 13 (comando)

    comando        go to state 70
    atribuicao     go to state 10
    desvio         go to state 11
    rotulo         go to state 12
    leitura        go to state 13
    impressao      go to state 14
    decisao        go to state 15
    identificador  go to state 16


state 55

   48 lista_expr_x: VIRG . lista_de_expressoes

    MULT   shift, and go to state 18
    PLUS   shift, and go to state 19
    DIV    shift, and go to state 20
    ID     shift, and go to state 6
    NUM    shift, and go to state 21
    MINUS  shift, and go to state 22

    expressao            go to state 31
    exprx                go to state 24
    termo                go to state 25
    termox               go to state 26
    fator                go to state 27
    lista_de_expressoes  go to state 71
    identificador        go to state 29
    numero               go to state 30


state 56

   46 lista_de_expressoes: expressao lista_expr_x .

    $default  reduce using rule 46 (lista_de_expressoes)


state 57

   33 desvio_x: identificador OF . lista_de_rotulos

    ID  shift, and go to state 6

    lista_de_rotulos  go to state 72
    rotulo            go to state 73
    identificador     go to state 16


state 58

   44 lista_id_x: VIRG . lista_de_identificadores

    ID  shift, and go to state 6

    lista_de_identificadores  go to state 74
    identificador             go to state 37


state 59

   42 lista_de_identificadores: identificador lista_id_x .

    $default  reduce using rule 42 (lista_de_identificadores)


state 60

    5 seq_comandox: PV comando . seq_comandoy

    PV  shift, and go to state 40

    $default  reduce using rule 6 (seq_comandoy)

    seq_comandox  go to state 75
    seq_comandoy  go to state 76


state 61

   14 comando: rotulo COLON comando .

    $default  reduce using rule 14 (comando)


state 62

   15 atribuicao: LET identificador ATRIB expressao .
   30 fator: expressao .

    PV        reduce using rule 15 (atribuicao)
    PV        [reduce using rule 30 (fator)]
    END       reduce using rule 15 (atribuicao)
    END       [reduce using rule 30 (fator)]
    ELSE      reduce using rule 15 (atribuicao)
    ELSE      [reduce using rule 30 (fator)]
    $default  reduce using rule 15 (atribuicao)


state 63

   27 termo_div_mult: termox .

    $default  reduce using rule 27 (termo_div_mult)


state 64

   24 termox: MULT fator termo_div_mult .

    $default  reduce using rule 24 (termox)


state 65

   21 expr_plus_minus: exprx .

    $default  reduce using rule 21 (expr_plus_minus)


state 66

   18 exprx: PLUS termo expr_plus_minus .

    $default  reduce using rule 18 (exprx)


state 67

   25 termox: DIV fator termo_div_mult .

    $default  reduce using rule 25 (termox)


state 68

   19 exprx: MINUS termo expr_plus_minus .

    $default  reduce using rule 19 (exprx)


state 69

   30 fator: expressao .
   50 comparacao: expressao operador_de_comparacao expressao .

    THEN      reduce using rule 30 (fator)
    THEN      [reduce using rule 50 (comparacao)]
    $default  reduce using rule 30 (fator)


state 70

   49 decisao: IF comparacao THEN comando . ELSE comando

    ELSE  shift, and go to state 77


state 71

   48 lista_expr_x: VIRG lista_de_expressoes .

    $default  reduce using rule 48 (lista_expr_x)


state 72

   33 desvio_x: identificador OF lista_de_rotulos .

    $default  reduce using rule 33 (desvio_x)


state 73

   34 lista_de_rotulos: rotulo . lista_rotulo_y

    VIRG  shift, and go to state 78

    $default  reduce using rule 35 (lista_rotulo_y)

    lista_rotulo_y  go to state 79
    lista_rotulox   go to state 80


state 74

   44 lista_id_x: VIRG lista_de_identificadores .

    $default  reduce using rule 44 (lista_id_x)


state 75

    7 seq_comandoy: seq_comandox .

    $default  reduce using rule 7 (seq_comandoy)


state 76

    5 seq_comandox: PV comando seq_comandoy .

    $default  reduce using rule 5 (seq_comandox)


state 77

   49 decisao: IF comparacao THEN comando ELSE . comando

    LET    shift, and go to state 1
    IF     shift, and go to state 2
    PRINT  shift, and go to state 3
    GOTO   shift, and go to state 4
    READ   shift, and go to state 5
    ID     shift, and go to state 6

    $default  reduce using rule 13 (comando)

    comando        go to state 81
    atribuicao     go to state 10
    desvio         go to state 11
    rotulo         go to state 12
    leitura        go to state 13
    impressao      go to state 14
    decisao        go to state 15
    identificador  go to state 16


state 78

   37 lista_rotulox: VIRG . rotulo lista_rotuloz

    ID  shift, and go to state 6

    rotulo         go to state 82
    identificador  go to state 16


state 79

   34 lista_de_rotulos: rotulo lista_rotulo_y .

    $default  reduce using rule 34 (lista_de_rotulos)


state 80

   36 lista_rotulo_y: lista_rotulox .

    $default  reduce using rule 36 (lista_rotulo_y)


state 81

   49 decisao: IF comparacao THEN comando ELSE comando .

    $default  reduce using rule 49 (decisao)


state 82

   37 lista_rotulox: VIRG rotulo . lista_rotuloz

    VIRG  shift, and go to state 78

    $default  reduce using rule 38 (lista_rotuloz)

    lista_rotulox  go to state 83
    lista_rotuloz  go to state 84


state 83

   39 lista_rotuloz: lista_rotulox .

    $default  reduce using rule 39 (lista_rotuloz)


state 84

   37 lista_rotulox: VIRG rotulo lista_rotuloz .

    $default  reduce using rule 37 (lista_rotulox)
